--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
+# Node modules
 node_modules
+package-lock.json
+
+# Adonis directory for storing tmp files
 tmp
+
+# Environment variables, never commit this file
 .env
-database/*.sqlite
-.cache
 
-# Don't push the public folder
-public
-
-# Keep only images
-!public/img
+# The development sqlite file
+database/development.sqlite
