--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "@adonisjs/validator": "^5.0.6",
     "cross-env": "^5.2.0",
     "mysql": "^2.16.0"
   },
