Implemented password reset.

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ DB_DATABASE=adonis
 
 SESSION_DRIVER=cookie
 HASH_DRIVER=bcrypt
+
+MAIL_CONNECTION=smtp
+SMTP_HOST=
+MAIL_USERNAME=
+MAIL_PASSWORD=
