--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/lucid-slugify": "^1.0.3",
     "@adonisjs/mail": "^3.0.9",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
     "@adonisjs/validator": "^5.0.6",
     "cross-env": "^5.2.0",
     "mysql": "^2.16.0",
-    "rand-token": "^0.4.0"
+    "rand-token": "^0.4.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "bulma": "^0.7.2",
